sintactico.output
Grammar

    0 $accept: class_decl $end

    1 class_decl: notes class_header converters extra
    2           | notes class_header NL
    3           | class_header converters NL
    4           | class_header NL
    5           | notes error NL
    6           | NL
    7           | error NL
    8           | /* empty */

    9 class_header: CLS_HDR

   10 notes: NOTE

   11 converters: CONV converter_list

   12 converter_list: converter
   13               | converter_list COMA converter
   14               | converter_list error converter
   15               | converter_list COMA error NL
   16               | converter_list COMA NL

   17 converter: conversion_procedure
   18          | conversion_query

   19 conversion_procedure: CONV_PROC

   20 conversion_query: CONV_QRY

   21 extra: /* empty */
   22      | NL


Terminals, with rules where they appear

$end (0) 0
error (256) 5 7 14 15
CONV (258) 11
COMA (259) 13 15 16
CLS_HDR (260) 9
CONV_PROC (261) 19
CONV_QRY (262) 20
NOTE (263) 10
NL (264) 2 3 4 5 6 7 15 16 22


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
class_decl (11)
    on left: 1 2 3 4 5 6 7 8, on right: 0
class_header (12)
    on left: 9, on right: 1 2 3 4
notes (13)
    on left: 10, on right: 1 2 5
converters (14)
    on left: 11, on right: 1 3
converter_list (15)
    on left: 12 13 14 15 16, on right: 11 13 14 15 16
converter (16)
    on left: 17 18, on right: 12 13 14
conversion_procedure (17)
    on left: 19, on right: 17
conversion_query (18)
    on left: 20, on right: 18
extra (19)
    on left: 21 22, on right: 1


state 0

    0 $accept: . class_decl $end

    error    shift, and go to state 1
    CLS_HDR  shift, and go to state 2
    NOTE     shift, and go to state 3
    NL       shift, and go to state 4

    $end  reduce using rule 8 (class_decl)

    class_decl    go to state 5
    class_header  go to state 6
    notes         go to state 7


state 1

    7 class_decl: error . NL

    NL  shift, and go to state 8


state 2

    9 class_header: CLS_HDR .

    $default  reduce using rule 9 (class_header)


state 3

   10 notes: NOTE .

    $default  reduce using rule 10 (notes)


state 4

    6 class_decl: NL .

    $default  reduce using rule 6 (class_decl)


state 5

    0 $accept: class_decl . $end

    $end  shift, and go to state 9


state 6

    3 class_decl: class_header . converters NL
    4           | class_header . NL

    CONV  shift, and go to state 10
    NL    shift, and go to state 11

    converters  go to state 12


state 7

    1 class_decl: notes . class_header converters extra
    2           | notes . class_header NL
    5           | notes . error NL

    error    shift, and go to state 13
    CLS_HDR  shift, and go to state 2

    class_header  go to state 14


state 8

    7 class_decl: error NL .

    $default  reduce using rule 7 (class_decl)


state 9

    0 $accept: class_decl $end .

    $default  accept


state 10

   11 converters: CONV . converter_list

    CONV_PROC  shift, and go to state 15
    CONV_QRY   shift, and go to state 16

    converter_list        go to state 17
    converter             go to state 18
    conversion_procedure  go to state 19
    conversion_query      go to state 20


state 11

    4 class_decl: class_header NL .

    $default  reduce using rule 4 (class_decl)


state 12

    3 class_decl: class_header converters . NL

    NL  shift, and go to state 21


state 13

    5 class_decl: notes error . NL

    NL  shift, and go to state 22


state 14

    1 class_decl: notes class_header . converters extra
    2           | notes class_header . NL

    CONV  shift, and go to state 10
    NL    shift, and go to state 23

    converters  go to state 24


state 15

   19 conversion_procedure: CONV_PROC .

    $default  reduce using rule 19 (conversion_procedure)


state 16

   20 conversion_query: CONV_QRY .

    $default  reduce using rule 20 (conversion_query)


state 17

   11 converters: CONV converter_list .
   13 converter_list: converter_list . COMA converter
   14               | converter_list . error converter
   15               | converter_list . COMA error NL
   16               | converter_list . COMA NL

    error  shift, and go to state 25
    COMA   shift, and go to state 26

    $end  reduce using rule 11 (converters)
    NL    reduce using rule 11 (converters)


state 18

   12 converter_list: converter .

    $default  reduce using rule 12 (converter_list)


state 19

   17 converter: conversion_procedure .

    $default  reduce using rule 17 (converter)


state 20

   18 converter: conversion_query .

    $default  reduce using rule 18 (converter)


state 21

    3 class_decl: class_header converters NL .

    $default  reduce using rule 3 (class_decl)


state 22

    5 class_decl: notes error NL .

    $default  reduce using rule 5 (class_decl)


state 23

    2 class_decl: notes class_header NL .

    $default  reduce using rule 2 (class_decl)


state 24

    1 class_decl: notes class_header converters . extra

    NL  shift, and go to state 27

    $default  reduce using rule 21 (extra)

    extra  go to state 28


state 25

   14 converter_list: converter_list error . converter

    CONV_PROC  shift, and go to state 15
    CONV_QRY   shift, and go to state 16

    converter             go to state 29
    conversion_procedure  go to state 19
    conversion_query      go to state 20


state 26

   13 converter_list: converter_list COMA . converter
   15               | converter_list COMA . error NL
   16               | converter_list COMA . NL

    error      shift, and go to state 30
    CONV_PROC  shift, and go to state 15
    CONV_QRY   shift, and go to state 16
    NL         shift, and go to state 31

    converter             go to state 32
    conversion_procedure  go to state 19
    conversion_query      go to state 20


state 27

   22 extra: NL .

    $default  reduce using rule 22 (extra)


state 28

    1 class_decl: notes class_header converters extra .

    $default  reduce using rule 1 (class_decl)


state 29

   14 converter_list: converter_list error converter .

    $default  reduce using rule 14 (converter_list)


state 30

   15 converter_list: converter_list COMA error . NL

    NL  shift, and go to state 33


state 31

   16 converter_list: converter_list COMA NL .

    $default  reduce using rule 16 (converter_list)


state 32

   13 converter_list: converter_list COMA converter .

    $default  reduce using rule 13 (converter_list)


state 33

   15 converter_list: converter_list COMA error NL .

    $default  reduce using rule 15 (converter_list)
